<resources>
    <!-- TITULOS -->
    <string name="app_name">Distribuidora de Electronica</string>
    <string name="titulo1">Inicia sesión</string>
    <string name="titulo2">Registro de usuarios</string>
    <string name="titulo3">Menu Principal</string>
    <string name="titulo4">Menu Principal Administrador</string>
    <string name="titulo5">Productos</string>
    <string name="titulo6">Compras</string>
    <string name="titulo7">Gestionar Usuario</string>
    <string name="titulo8">Gestionar Ventas</string>
    <string name="titulo9">Gestionar Productos</string>
    <string name="titulo10">Agregar Productos</string>
    <string name="titulo11">Agregar Ventas</string>
    <string name="titulo12">Editar Usuario</string>
    <string name="titulo13">Editar Producto</string>
    <string name="titulo14">Editar Venta</string>

    <!-- BOTONES -->
    <string name="boton1">Ingresar</string>
    <string name="boton2">Registrarse</string>
    <string name="boton3">Confirmar registro</string>
    <string name="boton4">Ver productos</string>
    <string name="boton5">Comprar</string>
    <string name="boton6">Gestionar Usuarios</string>
    <string name="boton7">Gestionar Productos</string>
    <string name="boton8">Gestionar Ventas</string>
    <string name="boton9">Generar informe</string>
    <string name="boton10">Cambiar tema</string>
    <string name="boton11">Agregar</string>
    <string name="boton12">Confirmar edicion</string>

    <!-- PLACEHOLDER -->
    <string name="placeHolder1">Usuario</string>
    <string name="placeHolder2">Contraseña</string>

    <!-- TEXTO INFORMATIVO -->
    <string name="textInfo">¿No estás registrado? Registrate aqui</string>
    <string name="textInfo2">Ingrese un usuario</string>
    <string name="textInfo3">Ingrese una contraseña</string>
    <string name="textInfo4">Nombre producto</string>
    <string name="textInfo5">Descripcion del producto</string>
    <string name="textInfo6">Precio del producto</string>
    <string name="textInfo7">Nombre Producto</string>
    <string name="textInfo8">Descripcion Producto</string>
    <string name="textInfo9">Precio Producto</string>
    <string name="textInfo10">Catidad Producto</string>
    <string name="textInfo11">Nombre Producto Vendido</string>
    <string name="textInfo12">Fecha Producto Vendido (AAAA-MM-DD)</string>
    <string name="textInfo13">Precio Producto Vendido</string>
    <string name="textInfo14">Catidad Producto Vendido</string>
    <string name="textInfo15">Usuario Actual</string>
    <string name="textInfo16">Contraseña Actual</string>
    <string name="textInfo17">Producto Actual</string>
    <string name="textInfo18">Precio Actual</string>
    <string name="textInfo19">Cantidad Actual</string>
    <string name="textInfo20">Venta actual</string>
    <string name="textInfo21">Precio venta actual</string>
    <string name="textInfo22">Cantidad venta actual</string>


    <string-array name="user_types">
        <item>Usuario</item>
        <item>Administrador</item>
    </string-array>
</resources>