<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registros.RegistroProductos">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="379dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372">

        <EditText
            android:id="@+id/txtnombreVenta"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:ems="10"
            android:hint="@string/textInfo11"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtCantidadVenta"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:ems="10"
            android:hint="@string/textInfo14"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtPrecioTotalVenta"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:ems="10"
            android:hint="@string/textInfo13"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtfechaVenta"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:ems="10"
            android:hint="@string/textInfo12"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="47dp"
        android:text="@string/boton11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="37dp"
        android:text="@string/titulo11"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
